<resources>
    <string name="app_name">AAD-PlayGround</string>
    <string name="label_name_file">Nombre del fichero</string>
    <string name="label_content_file">Contenido del fichero</string>
    <string name="label_select_file">Escribe el nombre del fichero</string>
    <string name="label_button_save">Guardar</string>
    <string name="label_button_explorer">Listar Ficheros</string>
    <string name="label_button_show_content">Mostrar contenido</string>

    <!-- Shared Preferences Keys-->
    <string name="preference_file_key">ut02_shared_pref</string>
    <string name="preference_file_exercise02">ut02_exercise02</string>
    <string name="preference_file_exercise03">ut02_exercise03</string>
    <string name="preference_encrypt_file_key">ut02_shared_pref_encrypt</string>

    <!-- Nombres botones ejercicio 2 unidad 2 -->
    <string name="action_file">Repositorio Fichero</string>
    <string name="action_mem">Repositorio Memoria</string>
    <string name="action_sharedpref">Repositorio SharedPreferences</string>

    <!-- Boton reset ejercicio 3 unidad 2 -->
    <string name="label_button_reset">Reset</string>

    <!-- String del ejercicio 4 de sharedpreferences -->
    <string name="preference_file_exercise04">ut02_exercise04</string>
    <string name="save_customers">Guardar clientes</string>
    <string name="get_customers">Conseguir clientes</string>
    <string name="remove_customers">Eliminar cliente</string>
    <string name="get_one_customer">Conseguir cliente 1</string>
    <string name="save_invoice">Guardar factura</string>
    <string name="get_invoice">Conseguir facturas</string>
    <string name="remove_invoice">Eliminar factura</string>
    <string name="get_one_invoice">Conseguir factura 1</string>
</resources>